# cpputest

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  CppUTest.vcproj  CppUTest.vcxproj  CppUTestConfig.cmake.build.in  CppUTestConfig.cmake.install.in  Makefile.am  Makefile_using_MakefileWorker  README.md  config.h.cmake  configure.ac
CppUTest/: CMakeLists.txt  config.h.cmake
CppUTest/config/: CMakeLists.txt
CppUTest/include/CppUTest/: CommandLineArguments.hpp  CommandLineTestRunner.hpp  CppUTestConfig.h  CppUTestConfig.hpp  JUnitTestOutput.hpp  MemoryLeakDetector.h  MemoryLeakDetector.hpp  MemoryLeakWarningPlugin.h  MemoryLeakWarningPlugin.hpp  PlatformSpecificFunctions.h  PlatformSpecificFunctions.hpp  SimpleMutex.hpp  SimpleString.h  SimpleString.hpp  SimpleStringCollection.hpp  SimpleStringInternalCache.h  SimpleStringInternalCache.hpp  StandardCLibrary.h  StringCollection.hpp  StringFrom.hpp  TeamCityTestOutput.hpp  TestFailure.h  TestFailure.hpp  TestFilter.hpp  TestHarness.h  TestHarness.hpp  TestHarness_c.h  TestMemoryAllocator.h  TestMemoryAllocator.hpp  TestOutput.h  TestOutput.hpp  TestPlugin.hpp  TestRegistry.h  TestRegistry.hpp  TestResult.h  TestResult.hpp  TestTestingFixture.h  TestTestingFixture.hpp  Utest.h  Utest.hpp  (+2 more)
CppUTest/src/: CommandLineArguments.cpp  CommandLineTestRunner.cpp  JUnitTestOutput.cpp  MemoryLeakDetector.cpp  MemoryLeakWarningPlugin.cpp  SimpleMutex.cpp  SimpleString.cpp  SimpleStringCollection.cpp  SimpleStringInternalCache.cpp  StringCollection.cpp  StringFrom.cpp  TeamCityTestOutput.cpp  TestFailure.cpp  TestFilter.cpp  TestHarness_c.cpp  TestMemoryAllocator.cpp  TestOutput.cpp  TestPlugin.cpp  TestRegistry.cpp  TestResult.cpp  TestTestingFixture.cpp  Utest.cpp
CppUTest/test/: AllTests.cpp  AllocLetTestFree.c  AllocLetTestFreeTest.cpp  AllocationInCFile.c  AllocationInCppFile.cpp  AllocationInCppFile.h  CMakeLists.txt  CommandLineArgumentsTest.cpp  DummyMemoryLeakDetector.h  MemoryLeakDetectorTest.cpp  MemoryLeakWarningTest.cpp  MemoryOperatorOverloadTest.cpp  SimpleMutexTest.cpp  SimpleStringCacheTest.cpp  SimpleStringTest.cpp  TestFailureNaNTest.cpp  TestFailureTest.cpp  TestHarness_cTest.cpp  TestHarness_cTestCFile.c  TestMemoryAllocatorTest.cpp  TestOutputTest.cpp  TestRegistryTest.cpp  TestUTestMacro.cpp  UtestPlatformTest.cpp  UtestTest.cpp
CppUTest/tests/: CMakeLists.txt
CppUTest/tests/include/: AllocationInCppFile.h  AllocationInCppFile.hpp  DummyMemoryLeakDetector.h  DummyMemoryLeakDetector.hpp
CppUTest/tests/src/: AllTests.cpp  AllocLetTestFree.c  AllocLetTestFreeTest.cpp  AllocationInCFile.c  AllocationInCppFile.cpp  CheatSheetTest.cpp  CommandLineArgumentsTest.cpp  CommandLineTestRunnerTest.cpp  CompatabilityTests.cpp  DummyMemoryLeakDetector.cpp  JUnitOutputTest.cpp  MemoryLeakDetectorTest.cpp  MemoryLeakWarningTest.cpp  MemoryOperatorOverloadTest.cpp  PluginTest.cpp  PreprocessorTest.cpp  SetPluginTest.cpp  SimpleMutexTest.cpp  SimpleStringCacheTest.cpp  SimpleStringTest.cpp  StringCollectionTest.cpp  StringFromTest.cpp  TeamCityOutputTest.cpp  TestFailureNaNTest.cpp  TestFailureTest.cpp  TestFilterTest.cpp  TestHarness_cTest.cpp  TestHarness_cTestCFile.c  TestInstallerTest.cpp  TestMemoryAllocatorTest.cpp  TestOutputTest.cpp  TestRegistryTest.cpp  TestResultTest.cpp  TestUTestMacro.cpp  TestUTestStringMacro.cpp  UtestPlatformTest.cpp  UtestTest.cpp
CppUTestExt/: CMakeLists.txt
CppUTestExt/include/CppUTestExt/: CodeMemoryReportFormatter.h  CodeMemoryReportFormatter.hpp  GMock.h  GTest.h  IEEE754ExceptionsPlugin.hpp  MemoryReportAllocator.h  MemoryReportAllocator.hpp  MemoryReportFormatter.h  MemoryReportFormatter.hpp  MemoryReporterPlugin.h  MemoryReporterPlugin.hpp  MockActualCall.h  MockActualCall.hpp  MockCheckedActualCall.h  MockCheckedActualCall.hpp  MockCheckedExpectedCall.h  MockCheckedExpectedCall.hpp  MockExpectedCall.h  MockExpectedCall.hpp  MockExpectedCallsList.h  MockExpectedCallsList.hpp  (+10 more)
CppUTestExt/src/: CodeMemoryReportFormatter.cpp  GTest.cpp  IEEE754ExceptionsPlugin.cpp  MemoryReportAllocator.cpp  MemoryReportFormatter.cpp  MemoryReporterPlugin.cpp  MockActualCall.cpp  MockExpectedCall.cpp  MockExpectedCallsList.cpp  MockFailure.cpp  MockNamedValue.cpp  MockSupport.cpp  MockSupportPlugin.cpp  MockSupport_c.cpp  OrderedTest.cpp
CppUTestExt/test/: AllTests.cpp  CMakeLists.txt  CodeMemoryReporterTest.cpp  GTest1Test.cpp  MemoryReportFormatterTest.cpp  MemoryReporterPluginTest.cpp  MockActualCallTest.cpp  MockFailureTest.cpp  MockParameterTest.cpp  MockSupportTest.cpp  MockSupport_cTest.cpp  MockSupport_cTestCFile.c  MockSupport_cTestCFile.h
CppUTestExt/tests/: CMakeLists.txt
examples/: CMakeLists.txt  Makefile
examples/AllTests/: CMakeLists.txt  CircularBufferTest.cpp  EventDispatcherTest.cpp  FEDemoTest.cpp  HelloTest.cpp  MockDocumentationTest.cpp  PrinterTest.cpp
examples/ApplicationLib/: CMakeLists.txt
src/CppUTest/: CMakeIntegration-README.md  CMakeLists.txt  CommandLineArguments.cpp  CommandLineTestRunner.cpp  CppUTestGeneratedConfig.h.cmake  JUnitTestOutput.cpp  MemoryLeakDetector.cpp  MemoryLeakWarningPlugin.cpp  SimpleMutex.cpp  SimpleString.cpp  SimpleStringInternalCache.cpp  TeamCityTestOutput.cpp  TestFailure.cpp  TestFilter.cpp  TestHarness_c.cpp  TestMemoryAllocator.cpp  TestOutput.cpp  TestPlugin.cpp  TestRegistry.cpp  TestResult.cpp  TestTestingFixture.cpp  Utest.cpp  config.h.cmake
tests/CppUTest/: AllocLetTestFreeTest.cpp  AllocationInCFile.c  AllocationInCppFile.cpp  AllocationInCppFile.h  CMakeLists.txt  JUnitOutputTest.cpp  MemoryLeakDetectorTest.cpp  MemoryLeakWarningTest.cpp  MemoryOperatorOverloadTest.cpp  SimpleStringTest.cpp  TestFailureNaNTest.cpp  TestFailureTest.cpp  TestHarness_cTest.cpp  TestHarness_cTestCFile.c  TestMemoryAllocatorTest.cpp  TestOutputTest.cpp  TestUTestMacro.cpp  UtestPlatformTest.cpp  UtestTest.cpp
tests/CppUTestExt/: CMakeLists.txt  IEEE754PluginTest.cpp  MockActualCallTest.cpp  MockExpectedCallTest.cpp  MockParameterTest.cpp  MockReturnValueTest.cpp  MockSupportTest.cpp  MockSupport_cTest.cpp
(+117 files in other folders)
