add_executable(CppUTestExtTests
    AllTests.cpp
    MockFailureReporterForTest.cpp
    ExpectedFunctionsListTest.cpp
    MockFailureReporterForTest.cpp
    MemoryReportAllocatorTest.cpp
    MemoryReportFormatterTest.cpp
    MemoryReporterPluginTest.cpp
    MockActualCallTest.cpp
    MockCheatSheetTest.cpp
    MockComparatorCopierTest.cpp
    MockExpectedCallTest.cpp
    MockHierarchyTest.cpp
    MockFailureReporterForTest.cpp
    CodeMemoryReporterTest.cpp
    OrderedTestTest.cpp
    OrderedTestTest_c.c
    MockFailureReporterForTest.cpp
    MockReturnValueTest.cpp
    MockNamedValueTest.cpp
    MockFailureReporterForTest.cpp
    MockPluginTest.cpp
    MockSupport_cTest.cpp
    MockSupport_cTestCFile.c
    MockFailureReporterForTest.cpp
    ExpectedFunctionsListTest.cpp
    MockCallTest.cpp
    MockFailureReporterForTest.cpp
    MockComparatorCopierTest.cpp
    MockHierarchyTest.cpp
    MockParameterTest.cpp
    MockFailureReporterForTest.cpp
    IEEE754PluginTest.cpp
    IEEE754PluginTest_c.c
    MockComparatorCopierTest.cpp
    MockFailureReporterForTest.cpp
    MockFailureTest.cpp
    MockHierarchyTest.cpp
    MockPluginTest.cpp
    MockReturnValueTest.cpp
    MockStrictOrderTest.cpp
    MockSupportTest.cpp
)

target_link_libraries(CppUTestExtTests
    PUBLIC
        CppUTest
        CppUTestExt
)

include(CppUTest)
cpputest_discover_tests(CppUTestExtTests
    DETAILED FALSE
)
